Common/src/main/java/org/example/error/CommandRuntimeException.java
package org.example.error;


import java.io.IOException;

/**
 * Класс исключения для ошибки во время выполнения команды
 */
public class CommandRuntimeException extends IOException {
}
